# ldt-2024-9

./: .gitignore  README.md
backend/: .~lock.data.csv#  Dockerfile  README.md  auth.py  authorize.py  data.csv  data.xlsx  dayoffs_2021.txt  dayoffs_2022.txt  dayoffs_2023.txt  dayoffs_2024.txt  dayoffs_2025.txt  experimenting_train.py  main.py  predictions.csv  predictions.xlsx  pyproject.toml  requirements.txt  table.xlsx  test.ipynb
backend/api_v1/: __init__.py
backend/api_v1/doctors/: crud.py  dependencies.py  roles.py  schemas.py  skills.py  views.py
backend/api_v1/events/: crud.py  views.py
backend/api_v1/files/: views.py
backend/api_v1/reports/: crud.py  schemas.py  views.py
backend/api_v1/schedule/: crud.py  schemas.py  views.py
backend/api_v1/stats/: schemas.py  view.py  views.py
backend/api_v1/workload/: workload.py
backend/core/: config.py
backend/core/models/: __init__.py  base.py  doctor.py  event.py  prediction.py  reports.py  schedule.py
backend/logic/: calculate_schedule.py  date_decomposition.py  generate_files.py  number_of_researches_to_hours.py  predict.py  production_calendar.py  scheduler.py  schemas.py
backend/model/: main.py
backend/mytypes/: __init__.py  doctors.py  workload.py
backend/schemas/: doctors.py  schedule.py  skills.py
backend/types/: doctors.py  schedule.py  workload.py
frontend/: .eslintrc.js  README.md  manifest.json  package-lock.json  package.json  server.ts  tsconfig.json  webpack.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/api/: API_URL.ts  default.ts  index.ts  translates.ts  (+1 more)
(+55 files in other folders)
