[tool.poetry]
name = "ldt"
version = "0.1.0"
description = ""
authors = ["svezhest <a.s.kryukov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.30"
phonenumbers = "^8.13.38"
numpy = "^1.26.4"
pandas = "^2.2.2"
statsmodels = "^0.14.2"
chardet = "^5.2.0"
python-multipart = "^0.0.9"
openpyxl = "^3.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
